# kultest

./: CMakeLists.txt  main.c  metod1.c
work/: #electo.glade#  electo.glade  metod (копия).glade  metod.glade  metod.glade~  metods1
work/metods/: metods.txt
work/metods/ispytanie1/: opisanie.txt
work/metods/ispytanie2/: opisanie.txt
work/metods/ispytanie3/: opisanie.txt
